        custom date formats (via the DateFormat argument).

    o   The readPDF() reader function can now be configured (via the
        PdfinfoOptions and PdftotextOptions arguments).

    o   The readDOC() reader function can now be configured (via the
        AntiwordOptions argument).

    o   Sources now can be vectorized. This allows faster corpus
        construction.

DEPRECATED & DEFUNCT

    o   CSVSource is defunct (use DataframeSource instead).

                CHANGES IN tm VERSION 0.3-3

NEW FEATURES

    o   The abstract Source class gets a default implementation for
        the stepNext() method. It increments the position counter by
        one, a reasonable value for most sources. For special purposes
        custom methods can be created via overloading stepNext() of
        the subclass.

    o   New URISource class for a single document identified by a
        Uniform Resource Identifier.

    o   New DataframeSource for documents stored in a data frame. Each
        row is interpreted as a single document.

BUG FIXES

    o   Fix off-by-one error in convertMboxEml() function. Reported by
        Angela Bohn.

    o   Sort row indices in sparse term-document matrices. Kudos to
        Martin Mächler for his suggestions.

    o   Sources and readers no longer evaluate calls in a non-standard
        way.

                CHANGES IN tm VERSION 0.3-2

NEW FEATURES

    o	Weighting functions now have an Acronym slot containing
        abbreviations of the weighting functions' names. This is highly
        useful when generating tables with indications which weighting
        scheme was actually used for your experiments.

    o   The functions tmFilter(), tmIndex(), tmMap() and TermDocMatrix()
        now can use a MPI cluster (via the snow and Rmpi packages) if
        available. Use (de)activateCluster() to manually override
        cluster usage settings. Special thanks to Stefan Theussl for
        his constructive comments.
